@@ -13,3 +13,11 @@ java --module-path ./javafx-sdk-11/lib --add-modules=javafx.controls,javafx.fxml
 ```bash
 java --module-path ./javafx-sdk-11/lib --add-modules=javafx.controls,javafx.fxml,javafx.web,javafx.graphics -jar ./target/JoinWhiteBoard-jar-with-dependencies.jar -ip localhost -p 8888 -u member1
 ```
+
+```bash
+java --module-path ./javafx-sdk-11/lib --add-modules=javafx.controls,javafx.fxml,javafx.web,javafx.graphics -jar ./target/JoinWhiteBoard-jar-with-dependencies.jar -ip localhost -p 8888 -u member2
+```
+
+```bash
+java --module-path ./javafx-sdk-11/lib --add-modules=javafx.controls,javafx.fxml,javafx.web,javafx.graphics -jar ./target/JoinWhiteBoard-jar-with-dependencies.jar -ip localhost -p 8888 -u member3
+```
